--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Drawer"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:windowSoftInputMode="adjustResize"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Drawer.NoActionBar">
+            android:name=".LoginandSignup"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Drawer.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
+            <!-- Khai báo intent-filter cho MainActivity nếu cần -->
+        </activity>
+
     </application>
 
 </manifest>
